<resources>
    <string name="app_name">Sydäntek</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_record">Record</string>
    <string name="menu_status">Status</string>
    <string name="menu_devices">Select Patch</string>
    <string name="menu_live">Live</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_snr_saturation">SNR + Saturation</string>

    <string name="dialog_title_patches">Select Patch</string>

    <string name="ble_not_supported">Bluetooth LE not supported!</string>
    <string name="cancel">Cancel</string>
    <string name="state">State:</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="capture_report">Capture Report</string>
    <string name="send_email">Send Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="patient_name">Patient Name</string>
    <string name="clear_patient">Clear Patient</string>
    <string name="select_patient">Select Patient</string>
    <string name="add_note">Medical History</string>
    <string name="history_status_syncing">Medical history · syncing…</string>
    <string name="history_saved_success">History saved successfully</string>
    <string name="medical_history_not_saved">Medical History: (Not saved)</string>
    <string name="save">Save</string>
    <string name="additional_note">Additional note</string>
    <string name="ready_to_go">Ready to Go</string>
    <string name="clear_cache">Clear Cache</string>
    <!-- Added for Android Logo Content Description -->
    <string name="android_logo_description">Android Logo</string>

    <!-- Accessibility descriptions -->
    <string name="select_or_clear_patient_desc">Select or Clear Patient</string>
    <string name="start_or_stop_recording_desc">Start or Stop Recording</string>





</resources>
