<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/main_menu" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_record"
            android:icon="@drawable/fiber_manual_record"
            android:title="@string/menu_record" />
        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_status" />
        <item
            android:id="@+id/nav_device_list"
            android:icon="@drawable/ic_bluetooth_black"
            android:title="@string/menu_devices" />
        <item
            android:id="@+id/nav_live"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_live" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_hisbundle"
            android:icon="@drawable/stop"
            android:title="His-Bundle" />

    </group>

    <group android:id="@+id/miscellaneous">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/exit_to_app"
            android:title="@string/menu_sign_out" />
    </group>

</menu>
