<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/nav_status">

    <fragment
        android:id="@id/nav_record"
        android:name="com.carditek.kesar.RecordFragment"
        android:label="@string/menu_record"
        tools:layout="@layout/fragment_record" />

    <fragment
        android:id="@id/nav_status"
        android:name="com.carditek.kesar.StatusFragment"
        android:label="@string/menu_status"
        tools:layout="@layout/fragment_status" />

    <fragment
        android:id="@id/nav_live"
        android:name="com.carditek.kesar.LiveFragment"
        android:label="@string/menu_live"
        tools:layout="@layout/fragment_live" />

    <fragment
        android:id="@id/nav_settings"
        android:name="com.carditek.kesar.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
